# log-analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
log_analyzer/: main.py  math.py  parsing.py  stats.py
tests/: test_log_analyzer.py  test_parsing.py  test_select_logfile.py
