[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = ""
authors = ["Viktor Taranenko <viktortnk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = { version = "^22.8.0", allow-prereleases = true }
pre-commit = "^2.20.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
